# media-uploader

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: testing.yml
src/: alembic.ini  app.py  config.py  test.db
src/admin/: __init__.py  auth.py  records.py  users.py
src/alembic/: env.py
src/alembic/versions/: 01edd22bc920_.py  2a56a166d1da_.py  8174285e7286_.py  8181642bd2f2_.py  c454c87d5715_.py
src/api/: routers.py
src/api/records/: router.py  schemas.py  service.py
src/api/users/: router.py  schemas.py  service.py
src/core/database/: db.py
src/core/database/models/: __init__.py  audio.py  users.py
src/core/factories/: user_factory.py
src/core/utils/: __init__.py  save_file.py
src/tests/: conftest.py  test_records.py  test_users.py
